<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园二货</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">我的二货</string>
    <string name="goodsName">商品：</string>
    <string name="category">类别</string>
    <string name="gl_choose_title">请选择图片</string>
    <string name="gl_wait">请稍等</string>
    <string name="forsale">求购</string>
    <string name="returnBtn">返回</string>
    <string name="ok">确定</string>
    <string name="sendMessage">发布信息</string>
    <string name="goods_picture">真相</string>
    <string name="search">搜索</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="cancel">取消</string>
    <string name="pleaseChoose">请选择</string>
    <string name="collectionList">收藏夹</string>
    <string name="user_name">姓名</string>
    <string name="price">价钱</string>
    <string name="yuan">元</string>
    <string name="info_c">信息内容</string>
   <string name="login_label_username">帐号</string>
    <string name="login_label_password">密码</string>
    <string name="login_label_signin">登 录</string>
    <string name="login_status_logging_in">登录中</string>
    <string name="login_username_hint">Email或手机号</string>
    <string name="login_register_link">没有帐号？ <a href="#">注册</a></string>
        <string name="hello">Hello World, LoginActivity!</string>
        <string name="account">请输入账号</string>
<string name="password">请输入密码</string>
<string name="login">登 录</string>
<string name="register2">注册新帐号</string>
    <string name="auto_save_password">记住密码</string>


 <string name="qr_register">QQ注册</string>

<string name="register_tishi">提示 带*的为必填内容</string>
           <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

      <string name="app_list_header_refresh_last_update">上次更新时间：</string>
  
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
</resources>